// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducers > network should handle decrement outstanding requests 1`] = `
Object {
  "allFetches": Array [],
  "error": null,
  "erroredFetches": Array [],
  "finishedFetches": Array [],
  "outstandingRequests": 0,
}
`;

exports[`reducers > network should handle default state 1`] = `
Object {
  "allFetches": Array [],
  "error": null,
  "erroredFetches": Array [],
  "finishedFetches": Array [],
  "outstandingRequests": 0,
}
`;

exports[`reducers > network should handle increment outstanding requests 1`] = `
Object {
  "allFetches": Array [],
  "error": null,
  "erroredFetches": Array [],
  "finishedFetches": Array [],
  "outstandingRequests": 0,
}
`;

exports[`reducers > network should handle lock ui with error 1`] = `
Object {
  "allFetches": Array [],
  "error": "mockError",
  "erroredFetches": Array [],
  "finishedFetches": Array [],
  "outstandingRequests": 0,
}
`;
